syntax = "proto3";
option java_multiple_files = true;
package com.ubb.pcis2083.soa.labels;
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


message Label {
    int64 id = 1;
    string name = 2;
}

message LabelResponse {
    repeated Label labels = 1;
}

service LabelService {
    rpc getAll(google.protobuf.Empty) returns (LabelResponse);
    rpc getById(google.protobuf.Int64Value) returns (Label);

    rpc save(Label) returns (google.protobuf.Int64Value);
    rpc update(Label) returns (google.protobuf.BoolValue);
    rpc deleteById(google.protobuf.Int64Value) returns (google.protobuf.BoolValue);
}
